dnl Process this file with autoconf to produce a configure script. -*-m4-*-
AC_INIT(hostfilter-host.c)
AM_INIT_AUTOMAKE(nss_hostfilter, 0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP			dnl Later checks need this.
AM_DISABLE_STATIC		dnl Makes no sense for a NSS module
AM_PROG_LIBTOOL

AC_OUTPUT(Makefile)
